%% Mermaid ER diagram — ArtBridge
%% Source of truth: prisma/schema.prisma (implemented)
%% Last generated: 2026-06-18T05:14:57Z (via /moai db refresh)
%% Auto-regenerated by moai-domain-db-docs hook on schema.prisma change.
erDiagram
    USER ||--o| CREATOR_PROFILE : "has (CREATOR only)"
    CREATOR_PROFILE ||--o{ MEMBERSHIP_PLAN : "offers"
    CREATOR_PROFILE ||--o{ POST : "authors"
    CREATOR_PROFILE ||--o{ PROGRAM : "runs"
    USER ||--o{ MEMBERSHIP : "subscribes (FAN)"
    MEMBERSHIP_PLAN ||--o{ MEMBERSHIP : "subscribed via"
    PROGRAM ||--o{ PROGRAM_APPLICATION : "receives"
    USER ||--o{ PROGRAM_APPLICATION : "applies (FAN)"
    PROGRAM_APPLICATION ||--|| CONTRACT : "produces (if accepted)"
    CONTRACT ||--o{ PAYMENT : "paid by"
    MEMBERSHIP ||--o{ PAYMENT : "billed by"
    USER ||--o{ PAYMENT : "pays as fan (PaymentFan)"
    PAYMENT ||--|| SETTLEMENT : "settles to"
    USER ||--o{ NOTIFICATION : "receives"
    PROGRAM ||--o{ REVIEW : "reviewed in"
    USER ||--o{ REVIEW : "writes (FAN)"

    USER {
        string id PK "cuid"
        string email UK
        string name
        enum role "FAN | CREATOR"
        timestamp created_at
        timestamp updated_at
    }

    CREATOR_PROFILE {
        string id PK "cuid"
        string user_id FK
        string studio_name
        string bio
        timestamp created_at
        timestamp updated_at
    }

    MEMBERSHIP_PLAN {
        string id PK "cuid"
        string creator_profile_id FK
        string title
        string description
        int price_krw
        timestamp created_at
        timestamp updated_at
    }

    MEMBERSHIP {
        string id PK "cuid"
        string user_id FK
        string plan_id FK
        timestamp started_at
        timestamp created_at
        timestamp updated_at
    }

    POST {
        string id PK "cuid"
        string creator_profile_id FK
        string title
        string body
        enum visibility "PUBLIC | MEMBER_ONLY | PAID"
        int price_krw
        timestamp created_at
        timestamp updated_at
    }

    PROGRAM {
        string id PK "cuid"
        string creator_profile_id FK
        string title
        string description
        timestamp created_at
        timestamp updated_at
    }

    PROGRAM_APPLICATION {
        string id PK "cuid"
        string program_id FK
        string user_id FK
        enum status "PENDING | ACCEPTED | REJECTED"
        string message
        timestamp created_at
        timestamp updated_at
    }

    CONTRACT {
        string id PK "cuid"
        string application_id FK
        json terms
        timestamp agreed_at
        timestamp created_at
    }

    PAYMENT {
        string id PK "cuid"
        string membership_id FK
        string contract_id FK
        string fan_user_id FK
        int amount
        int fee_krw
        enum status "PENDING | PAID | RELEASED | REFUNDED | FAILED"
        timestamp created_at
        timestamp updated_at
    }

    SETTLEMENT {
        string id PK "cuid"
        string payment_id FK
        int payout
        enum status "PENDING | RELEASED"
        timestamp created_at
        timestamp updated_at
    }

    NOTIFICATION {
        string id PK "cuid"
        string user_id FK
        string type
        string message
        timestamp read_at
        timestamp created_at
    }

    REVIEW {
        string id PK "cuid"
        string program_id FK
        string user_id FK
        int rating
        string comment
        timestamp created_at
    }
